[package]
edition = "2021"
name = "gossip"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
bincode = "1.3.3"
crossbeam-channel = "0.5.6"
dotenvy = "0.15.6"
env_logger = "0.10.0"
if-addrs = "0.8.0"
log = "0.4.17"
mdns-sd = {version = "0.5.10", features = ["async"]}
rand = "0.8.5"
serde = "1.0.152"
serde_derive = "1.0.152"
socket2 = "0.4.7"
tokio = {version = "1.25.0", features = ["full"]}
