[package]
authors = ["Serval Contributors <team@serval.sh>"]
categories = ["mesh", "gossip protocols", "network-programming", "peer-to-peer"]
description = """
A low-configuration peer discovery mechanism for building peer-to-peer and mesh applications, based
on the SWIM gossip protocol.
"""
edition = "2021"
homepage = "https://serval.sh"
keywords = ["peer-to-peer", "mesh", "networking", "swim", "gossip"]
license = "BSD-2-Clause-Patent"
name = "kaboodle"
readme = "README.md"
repository = "https://github.com/serval/kaboodle"
rust-version = "1.67"
version = "0.1.5"

[dependencies]
anyhow = "1.0.69"
atty = "0.2.14"
bincode = "1.3.3"
bytes = { version = "1.4.0", features = ["serde"] }
clap = { version = "4.1.8", features = ["derive"] }
crc32fast = "1.3.2"
dotenvy = "0.15.6"
env_logger = "0.10.0"
if-addrs = "0.10.1"
libc = "0.2.139"
log = "0.4.17"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = "1.0.152"
serde_derive = "1.0.152"
socket2 = "0.4.7"
thiserror = "1.0.38"
tokio = {version = "1.25.0", features = ["full"]}
